--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@editorjs/image": "^2.8.1",
         "@editorjs/link": "^2.5.0",
         "@editorjs/list": "^1.8.0",
+        "@editorjs/paragraph": "^2.9.0",
         "@editorjs/quote": "^2.5.0",
         "@editorjs/simple-image": "^1.5.1",
         "@react-oauth/google": "^0.8.0",
